feat: webpack integration completed

--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,6 @@
 			content="height=device-height, width=device-width, initial-scale=1.0"
 		/>
 
-		<link
-			rel="stylesheet"
-			href="./static/fonts/Montserrat/stylesheet.css"
-		/>
-		<link rel="stylesheet" href="./static/styles.css" />
-
-		<script src="./static/main.js" defer></script>
-
 		<title>Shopper</title>
 	</head>
 	<body>
@@ -34,7 +26,7 @@
 							/>
 							<button class="search-form__button">
 								<img
-									src="./static/svg/search.svg"
+									src="../src/assets/svg/search.svg"
 									height="21"
 									width="21"
 									draggable="false"
@@ -45,7 +37,7 @@
 						<button class="aside__button">
 							<img
 								class="aside__button-icon"
-								src="./static/svg/cart.svg"
+								src="../src/assets/svg/cart.svg"
 								height="20"
 								width="16"
 								draggable="false"
@@ -56,7 +48,7 @@
 						<button class="aside__button aside__button_login">
 							<img
 								class="aside__button-icon"
-								src="./static/svg/profile.svg"
+								src="../src/assets/svg/profile.svg"
 								height="20"
 								width="16"
 								draggable="false"
@@ -67,7 +59,7 @@
 					</div>
 					<button class="mobile-nav-btn_open">
 						<img
-							src="./static/svg/burger-menu.svg"
+							src="../src/assets/svg/burger-menu.svg"
 							height="38"
 							width="38"
 							draggable="false"
@@ -89,7 +81,7 @@
 				<div class="nav_mobile__menu animate-slidein-css">
 					<button class="mobile-nav-btn_close">
 						<img
-							src="./static/svg/close.svg"
+							src="../src/assets/svg/close.svg"
 							height="52"
 							width="52"
 							draggable="false"
@@ -108,7 +100,7 @@
 						/>
 						<button class="search-form__button">
 							<img
-								src="./static/svg/search.svg"
+								src="../src/assets/svg/search.svg"
 								height="21"
 								width="21"
 								draggable="false"
@@ -146,28 +138,28 @@
 						<div class="reviews__icons">
 							<img
 								class="reviews__icons-img"
-								src="./static/img/reviews/1.png"
+								src="../src/assets/img/reviews/1.png"
 								height="60"
 								width="60"
 								alt="avatar1"
 							/>
 							<img
 								class="reviews__icons-img"
-								src="./static/img/reviews/2.png"
+								src="../src/assets/img/reviews/2.png"
 								height="60"
 								width="60"
 								alt="avatar2"
 							/>
 							<img
 								class="reviews__icons-img"
-								src="./static/img/reviews/3.png"
+								src="../src/assets/img/reviews/3.png"
 								height="60"
 								width="60"
 								alt="avatar3"
 							/>
 							<img
 								class="reviews__icons-img"
-								src="./static/img/reviews/4.png"
+								src="../src/assets/img/reviews/4.png"
 								height="60"
 								width="60"
 								alt="avatar4"
@@ -181,7 +173,7 @@
 						<div class="play-video__wrapper">
 							<div class="play-video__icon">
 								<img
-									src="./static/img/man-listening.png"
+									src="../src/assets/img/man-listening.png"
 									height="70"
 									alt="man-listening"
 								/>
@@ -192,20 +184,20 @@
 					<div class="headphones">
 						<img
 							class="star-top"
-							src="./static/svg/star_yellow.svg"
+							src="../src/assets/svg/star_yellow.svg"
 							height="53"
 							alt="star1"
 						/>
 						<img
 							class="star-bottom"
-							src="./static/svg/star_yellow.svg"
+							src="../src/assets/svg/star_yellow.svg"
 							height="53"
 							alt="star1"
 						/>
 						<div class="headphones__picture">
 							<img
 								class="headphones__picture-img"
-								src="./static/img/phones.png"
+								src="../src/assets/img/phones.png"
 								height="299"
 								alt="headphones"
 							/>
@@ -241,19 +233,19 @@
 						<div class="products__photos">
 							<img
 								class="products__photos-img"
-								src="./static/img/earphones/1.png"
+								src="../src/assets/img/earphones/1.png"
 								height="331"
 								alt="earphones1"
 							/>
 							<img
 								class="products__photos-img"
-								src="./static/img/earphones/2.png"
+								src="../src/assets/img/earphones/2.png"
 								height="331"
 								alt="earphones2"
 							/>
 							<img
 								class="products__photos-img"
-								src="./static/img/earphones/3.png"
+								src="../src/assets/img/earphones/3.png"
 								height="331"
 								alt="earphones3"
 							/>
@@ -296,7 +288,7 @@
 						disabled
 					>
 						<img
-							src="./static/svg/arrow.svg"
+							src="../src/assets/svg/arrow.svg"
 							height="28"
 							draggable="false"
 							alt="arrow left"
@@ -307,7 +299,7 @@
 							<div class="card card_color_mint-cream">
 								<img
 									class="card__photo-img"
-									src="./static/img/sellers/1.png"
+									src="../src/assets/img/sellers/1.png"
 									height="200"
 									alt="earphones1"
 								/>
@@ -318,27 +310,27 @@
 									<div class="card__info-rating">
 										<div class="rating__stars">
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
@@ -363,7 +355,7 @@
 							<div class="card card_color_light-cyan">
 								<img
 									class="card__photo-img"
-									src="./static/img/sellers/2.png"
+									src="../src/assets/img/sellers/2.png"
 									height="200"
 									alt="earphones1"
 								/>
@@ -374,27 +366,27 @@
 									<div class="card__info-rating">
 										<div class="rating__stars">
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
@@ -414,7 +406,7 @@
 							<div class="card card_color_light-mallow">
 								<img
 									class="card__photo-img"
-									src="./static/img/sellers/3.png"
+									src="../src/assets/img/sellers/3.png"
 									height="200"
 									alt="earphones1"
 								/>
@@ -425,27 +417,27 @@
 									<div class="card__info-rating">
 										<div class="rating__stars">
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
@@ -469,7 +461,7 @@
 					</div>
 					<button class="tabs-wrapper__button_right tabs-pg-btn">
 						<img
-							src="./static/svg/arrow.svg"
+							src="../src/assets/svg/arrow.svg"
 							height="28"
 							draggable="false"
 							alt="arrow left"
@@ -492,7 +484,7 @@
 						disabled
 					>
 						<img
-							src="./static/svg/arrow.svg"
+							src="../src/assets/svg/arrow.svg"
 							height="28"
 							draggable="false"
 							alt="arrow left"
@@ -503,7 +495,7 @@
 							<div class="card card_color_dark-blue-alice">
 								<img
 									class="card__photo-img"
-									src="./static/img/trending/1.png"
+									src="../src/assets/img/trending/1.png"
 									height="200"
 									alt="earphones1"
 								/>
@@ -514,27 +506,27 @@
 									<div class="card__info-rating">
 										<div class="rating__stars">
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
@@ -559,7 +551,7 @@
 							<div class="card card_color_light-blue-alice">
 								<img
 									class="card__photo-img"
-									src="./static/img/trending/2.png"
+									src="../src/assets/img/trending/2.png"
 									height="200"
 									alt="earphones1"
 								/>
@@ -570,27 +562,27 @@
 									<div class="card__info-rating">
 										<div class="rating__stars">
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
@@ -610,7 +602,7 @@
 							<div class="card card_color_paleturquoise">
 								<img
 									class="card__photo-img"
-									src="./static/img/trending/3.png"
+									src="../src/assets/img/trending/3.png"
 									height="200"
 									alt="earphones1"
 								/>
@@ -621,27 +613,27 @@
 									<div class="card__info-rating">
 										<div class="rating__stars">
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
 											<img
-												src="./static/svg/star_rating.svg"
+												src="../src/assets/svg/star_rating.svg"
 												draggable="false"
 												alt="star"
 											/>
@@ -665,7 +657,7 @@
 					</div>
 					<button class="tabs-wrapper__button_right tabs-pg-btn">
 						<img
-							src="./static/svg/arrow.svg"
+							src="../src/assets/svg/arrow.svg"
 							height="28"
 							draggable="false"
 							alt="arrow left"
@@ -679,13 +671,13 @@
 					<div class="launches__photos">
 						<img
 							class="launches__photos-img"
-							src="./static/img/launches/1.png"
+							src="../src/assets/img/launches/1.png"
 							height="423"
 							alt="earphones3"
 						/>
 						<img
 							class="launches__photos-img"
-							src="./static/img/launches/2.png"
+							src="../src/assets/img/launches/2.png"
 							height="423"
 							alt="earphones4"
 						/>
@@ -741,7 +733,7 @@
 							/>
 							<button class="subscribe-form__button">
 								<img
-									src="./static/svg/arrow.svg"
+									src="../src/assets/svg/arrow.svg"
 									height="21"
 									width="21"
 									draggable="false"
@@ -772,13 +764,15 @@
 				</div>
 				<div class="footer__block footer__block_terms">
 					<div class="footer__block-links">
-						<a href="#" class="block-links__link">Terms & Conditions</a>
+						<a href="#" class="block-links__link"
+							>Terms & Conditions</a
+						>
 						<a href="#" class="block-links__link">Privacy Policy</a>
 					</div>
 					<div class="footer__block-socials">
 						<a href="#" class="block-socials__icon">
 							<img
-								src="./static/svg/social/facebook.svg"
+								src="../src/assets/svg/social/facebook.svg"
 								height="22"
 								width="22"
 								draggable="false"
@@ -787,7 +781,7 @@
 						</a>
 						<a href="#" class="block-socials__icon">
 							<img
-								src="./static/svg/social/twitter.svg"
+								src="../src/assets/svg/social/twitter.svg"
 								height="22"
 								width="22"
 								draggable="false"
@@ -796,7 +790,7 @@
 						</a>
 						<a href="#" class="block-socials__icon">
 							<img
-								src="./static/svg/social/instagram.svg"
+								src="../src/assets/svg/social/instagram.svg"
 								height="22"
 								width="22"
 								draggable="false"
