feat: SCSS integration completed

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
 	<body>
 		<div class="wrapper">
 			<header class="header">
-				<div class="header_section">
+				<div class="header-section">
 					<a class="logo" href="#">
 						<span class="logo__text_color_main">Shop</span>per
 					</a>
-					<div class="header__aside">
+					<div class="header-section__aside">
 						<form class="search-form" onsubmit="return false;">
 							<input
 								class="search-form__input"
@@ -67,7 +67,7 @@
 						/>
 					</button>
 				</div>
-				<nav class="header_section nav">
+				<nav class="header-section nav">
 					<ul class="nav__list">
 						<li class="nav__link"><a href="#">Features</a></li>
 						<li class="nav__link"><a href="#">Products</a></li>
@@ -109,16 +109,16 @@
 						</button>
 					</form>
 					<ul class="nav__list nav_mobile__list">
-						<li class="nav__link nav_mobile__link">
+						<li class="nav_mobile__link">
 							<a href="#">Features</a>
 						</li>
-						<li class="nav__link nav_mobile__link">
+						<li class="nav_mobile__link">
 							<a href="#">Products</a>
 						</li>
-						<li class="nav__link nav_mobile__link">
+						<li class="nav_mobile__link">
 							<a href="#">Blog</a>
 						</li>
-						<li class="nav__link nav_mobile__link">
+						<li class="nav_mobile__link">
 							<a href="#">About</a>
 						</li>
 					</ul>
@@ -127,7 +127,7 @@
 			<section class="content content-info">
 				<div class="content-info__side_left">
 					<h1 class="content__h1">Discover Our Latest Products</h1>
-					<p class="content__description">
+					<p class="content-info__description">
 						Lorem ipsum is a placeholder text commonly used to
 						demonstrate the visual form of a product
 					</p>
@@ -695,9 +695,9 @@
 						<span class="products__price_bold">$ 45.99</span>
 					</div>
 					<div class="launches__colors">
-						<div class="color colors__black"></div>
-						<div class="color colors__yellow"></div>
-						<div class="color colors__blue"></div>
+						<div class="color color_black"></div>
+						<div class="color color_yellow"></div>
+						<div class="color color_blue"></div>
 					</div>
 					<div class="launches-actions">
 						<button class="button button_color_green cart-btn">
