feat(page): tabs completed

--- a/public/index.html
+++ b/public/index.html
@@ -277,7 +277,7 @@
 			<section class="content content-sellers">
 				<h3 class="content__h3">Top Sellers</h3>
 				<div class="tabs content__tabs">
-					<button class="tab tab_active ontop" disabled>
+					<button class="tab tab_active ontop">
 						Top Picks
 					</button>
 					<button class="tab ontop">Watches</button>
@@ -291,11 +291,11 @@
 							src="../src/assets/svg/arrow.svg"
 							height="28"
 							draggable="false"
-							alt="arrow left"
+							alt="arrow"
 						/>
 					</button>
 					<div class="tabs-content">
-						<div class="card-wrapper">
+						<div class="card-wrapper animate-fadein-long-css">
 							<div class="card card_color_mint-cream">
 								<img
 									class="card__photo-img"
@@ -351,7 +351,7 @@
 								Add to cart
 							</button>
 						</div>
-						<div class="card-wrapper">
+						<div class="card-wrapper animate-fadein-long-css">
 							<div class="card card_color_light-cyan">
 								<img
 									class="card__photo-img"
@@ -402,7 +402,7 @@
 								Add to cart
 							</button>
 						</div>
-						<div class="card-wrapper">
+						<div class="card-wrapper animate-fadein-long-css">
 							<div class="card card_color_light-mallow">
 								<img
 									class="card__photo-img"
@@ -464,7 +464,7 @@
 							src="../src/assets/svg/arrow.svg"
 							height="28"
 							draggable="false"
-							alt="arrow left"
+							alt="arrow"
 						/>
 					</button>
 				</div>
@@ -472,7 +472,7 @@
 			<section class="content content-trending">
 				<h3 class="content__h3">Trending Earphones</h3>
 				<div class="tabs content__tabs">
-					<button class="tab tab_active ontop" disabled>
+					<button class="tab tab_active ontop">
 						Earbuds
 					</button>
 					<button class="tab ontop">Wireless</button>
@@ -487,11 +487,11 @@
 							src="../src/assets/svg/arrow.svg"
 							height="28"
 							draggable="false"
-							alt="arrow left"
+							alt="arrow"
 						/>
 					</button>
 					<div class="tabs-content">
-						<div class="card-wrapper">
+						<div class="card-wrapper animate-fadein-long-css">
 							<div class="card card_color_dark-blue-alice">
 								<img
 									class="card__photo-img"
@@ -547,7 +547,7 @@
 								Add to cart
 							</button>
 						</div>
-						<div class="card-wrapper">
+						<div class="card-wrapper animate-fadein-long-css">
 							<div class="card card_color_light-blue-alice">
 								<img
 									class="card__photo-img"
@@ -598,7 +598,7 @@
 								Add to cart
 							</button>
 						</div>
-						<div class="card-wrapper">
+						<div class="card-wrapper animate-fadein-long-css">
 							<div class="card card_color_paleturquoise">
 								<img
 									class="card__photo-img"
@@ -660,7 +660,7 @@
 							src="../src/assets/svg/arrow.svg"
 							height="28"
 							draggable="false"
-							alt="arrow left"
+							alt="arrow"
 						/>
 					</button>
 				</div>
